FEAT: (MOISAM-254) 중간지점 역 개수를 3개로 고정한다